--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -16,25 +16,42 @@
         width: 90%;
         margin: 0 auto;
         color: $light-gray;
+        ::-webkit-input-placeholder {
+            color: #fff;
+        }
+        ::-moz-placeholder {
+            color: #fff;  
+        }
         input[type=text]{
             text-align: center;
             margin-bottom: 1.25rem;
             padding: 1rem;
-            font-weight: 300;
-            background-color: #f4f4f4;
+            background-color: #B6B6B6;
             width: 100%;
             border: hidden;
             outline: none;
+            border-radius: 0;
+            color: #fff;
+            font-size: .8rem;
+            font-weight: 300;
+            letter-spacing: .15rem;
+            font-family: Helvetica Neue, sans-serif;
         }
         textarea {
             text-align: center;
             width: 100%;
             font-weight: 300;
             padding: 1rem;
-            background-color: #f4f4f4;
+            background-color: #B6B6B6;
             border: hidden; 
             outline: none;
-            resize: vertical;
+            border-radius: 0;
+            color: #fff;
+            font-size: .8rem;
+            font-weight: 300;
+            letter-spacing: .15rem;
+            font-family: Helvetica Neue, sans-serif;
+            // resize: vertical;
         }
     }
     button {
