--- a/styles/base.css
+++ b/styles/base.css
@@ -428,19 +428,19 @@ h1 {
   .contact button {
     margin: 1.25rem 0;
     padding: .9375rem 1.875rem;
-    background-color: #666666;
+    background-color: #b1d2fd;
     border: none;
     font-size: .9375rem;
     font-weight: 300;
-    color: #fff;
+    color: #666666;
     letter-spacing: .0625rem;
     outline: none; }
   /* line 69, _contact.scss */
   .contact button:hover {
-    background-color: #b1d2fd;
-    color: #666666;
+    background-color: #B6B6B6;
+    color: #fff;
     outline: none; }
   /* line 75, _contact.scss */
   .contact button:active {
-    background-color: #b1d2fd;
+    background-color: #B6B6B6;
     outline: none; }
