--- a/styles/_recipe-title.scss
+++ b/styles/_recipe-title.scss
@@ -36,14 +36,14 @@ h1 {
 			font-weight: bold;
 			text-align: center;
 		}
-		span {
-			display: block;
-			position: absolute;
-			height: .0625rem;
-			width: 21rem;
-			background: $light-gray;
-			opacity: 1;
-			margin-top: .9rem;
-		}
+		// span {
+		// 	display: block;
+		// 	position: absolute;
+		// 	height: .0625rem;
+		// 	width: 18rem;
+		// 	background: $light-gray;
+		// 	opacity: 1;
+		// 	margin-top: .9rem;
+		// }
 	}
 }
