--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -38,15 +38,15 @@ nav {
 		width: 100%;
 		position: relative;
 	}
-	// #pull:after {
-	// 	content: "";
-	// 	width: 60px;
-	// 	height: 40px;
-	// 	display: inline-block;
-	// 	position: absolute;
-	// 	right: 1rem;
-	// 	top:0.5rem;
-	// }
+	#pull:after {
+		content: "";
+		width: 60px;
+		height: 40px;
+		display: inline-block;
+		position: absolute;
+		right: 1rem;
+		top:0.5rem;
+	}
 	// .shadow	{
 	// 	border-bottom: .0625rem solid rgba(102,102,102,.9);
 	// 	background-origin: content-box;
